# python-chess-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/chess_engine/: __init__.py  board.py  engine.py  evaluation.py  gui.py  main.py  move_generator.py  search.py
tests/: test_board.py
